# rust_learning

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md
src/: kaiten.rs  lib.rs  main.rs  model.rs  old.rs  utils.rs
src/kaiten_api/: Cargo.toml
src/kaiten_api/src/: api.rs  lib.rs  models.rs  utils.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
web/: index.html
